linux (4.8.4-1~exp2) UNRELEASED; urgency=medium

  * cpufreq: Re-enable CPU_FREQ_STAT, which can no longer be modular
  * [armhf] dts: imx53: add support for USB armory board (Closes: #840137)

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 24 Oct 2016 02:25:26 +0100

linux (4.8.4-1~exp1) experimental; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_4.8
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.8.1
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.8.2
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.8.3
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.8.4

  [ Ben Hutchings ]
  * [amd64] Enable LEGACY_VSYSCALL_NONE instead of LEGACY_VSYSCALL_EMULATE.
    This breaks (e)glibc 2.13 and earlier, and can be reverted using the kernel
    parameter: vsyscall=emulate
  * [arm*] Enable STRICT_DEVMEM
  * [arm*,powerpc*,s390x,x86] Enable IO_STRICT_DEVMEM.  This breaks dosemu and
    some old graphics drivers, and can be reverted using the kernel parameter:
    iomem=relaxed
  * [mips*] Enable RANDOMIZE_BASE and RELOCATABLE.
  * Enable SLAB_FREELIST_RANDOM
  * [arm*,powerpc*,s390x,sparc64,x86] Enable HARDENED_USERCOPY
  * security,perf: Replace GRKERNSEC_PERF_HARDEN patch with the version
    submitted upstream
  * [amd64] Enable RANDOMIZE_MEMORY
  * [powerpc*/*64*] Enable OPAL_PRD, MTD, MTD_POWERNV_FLASH as modules
    (Closes: #838604, #838605)
  * security,printk: Enable SECURITY_DMESG_RESTRICT, preventing non-root users
    reading the kernel log by default (sysctl: kernel.dmesg_restrict)
  * bug script: Optionally use sudo to read a restricted kernel log, and fall
    back to writing a placeholder
  * [rt] Update to 4.8.2-rt2 and re-enable
  * aufs: Update support patchest to aufs4.8-20161010 (no functional change)

  [ Aurelien Jarno ]
  * [arm64] Enable SERIAL_8250_EXTENDED, SERIAL_8250_SHARE_IRQ and
    SERIAL_8250_BCM2835AUX, needed for Raspberry Pi 3.
