@@ -20,7 +20,7 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
 
 --- a/scripts/kconfig/conf.c
 +++ b/scripts/kconfig/conf.c
-@@ -368,7 +368,6 @@ static void conf(struct menu *menu)
+@@ -369,7 +369,6 @@ static void conf(struct menu *menu)
  		switch (prop->type) {
  		case P_MENU:
  			if ((input_mode == silentoldconfig ||
@@ -28,7 +28,7 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
  			     input_mode == olddefconfig) &&
  			    rootEntry != menu) {
  				check_conf(menu);
-@@ -429,11 +428,7 @@ static void check_conf(struct menu *menu
+@@ -430,11 +429,7 @@ static void check_conf(struct menu *menu
  	if (sym && !sym_has_value(sym)) {
  		if (sym_is_changable(sym) ||
  		    (sym_is_choice(sym) && sym_get_tristate_value(sym) == yes)) {
@@ -41,7 +41,7 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
  				if (!conf_cnt++)
  					printf(_("*\n* Restart config...\n*\n"));
  				rootEntry = menu_get_parent_menu(menu);
-@@ -446,6 +441,30 @@ static void check_conf(struct menu *menu
+@@ -447,6 +442,30 @@ static void check_conf(struct menu *menu
  		check_conf(child);
  }
  
@@ -72,7 +72,7 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
  static struct option long_opts[] = {
  	{"oldaskconfig",    no_argument,       NULL, oldaskconfig},
  	{"oldconfig",       no_argument,       NULL, oldconfig},
-@@ -493,6 +512,7 @@ int main(int ac, char **av)
+@@ -494,6 +513,7 @@ int main(int ac, char **av)
  	const char *progname = av[0];
  	int opt;
  	const char *name, *defconfig_file = NULL /* gcc uninit */;
@@ -80,7 +80,7 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
  	struct stat tmpstat;
  
  	setlocale(LC_ALL, "");
-@@ -672,16 +692,18 @@ int main(int ac, char **av)
+@@ -673,16 +693,18 @@ int main(int ac, char **av)
  		input_mode = silentoldconfig;
  		/* fall through */
  	case oldconfig:
@@ -120,7 +120,7 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
  int conf_write(const char *name)
  {
  	FILE *out;
-@@ -1170,7 +1178,10 @@ bool conf_set_all_new_symbols(enum conf_
+@@ -1171,7 +1179,10 @@ bool conf_set_all_new_symbols(enum conf_
  	bool has_changed = false;
  
  	for_all_symbols(i, sym) {
@@ -134,11 +134,11 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
  		case S_BOOLEAN:
 --- a/scripts/kconfig/expr.h
 +++ b/scripts/kconfig/expr.h
-@@ -112,6 +112,8 @@ struct symbol {
+@@ -114,6 +114,8 @@ struct symbol {
  /* Set symbol to y if allnoconfig; used for symbols that hide others */
  #define SYMBOL_ALLNOCONFIG_Y 0x200000
  
-+#define SYMBOL_NEW        0x200000 /* symbol is new (loaded config did not provide a value) */
++#define SYMBOL_NEW        0x400000 /* symbol is new (loaded config did not provide a value) */
 +
  #define SYMBOL_MAXLENGTH	256
  #define SYMBOL_HASHSIZE		9973
