@@ -2,6 +2,8 @@ linux (4.8.4-1~exp2) UNRELEASED; urgency=medium
 
   * cpufreq: Re-enable CPU_FREQ_STAT, which can no longer be modular
   * [armhf] dts: imx53: add support for USB armory board (Closes: #840137)
+  * kconfig: Renumber SYMBOL_NEW, fixing regression of allnoconfig
+    (Closes: #841357)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 24 Oct 2016 02:25:26 +0100
 
